--- a/res/layout/rowlayout.xml
+++ b/res/layout/rowlayout.xml
@@ -21,11 +21,12 @@
         android:layout_height="wrap_content"
          android:layout_below="@id/entry"
          android:layout_toRightOf="@id/label"
-        android:text="OK" />
+         />
     <TextView
+         android:id="@+id/cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ok"
         android:layout_toRightOf="@id/label"
-        android:text="Cancel" />
+        />
 </RelativeLayout>
