mise en place de la maniere de charger une image via le net de maniere asynchrone dans l'activite principale

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,6 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </EditText>
+    
+    <ImageView 
+    android:id="@+id/imview"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    />
 
     <ListView
         android:id="@+id/mylist"
